# VanGo

./: .gitignore  Cargo.toml  README.md  build.sh  lib.json  rustfmt.toml  vango.lnk
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  builds.md  crosscomp.md  libraries.md  testing.md  toolchains.md
docs/toolchains/: clang.toml  gcc.toml  msvc.toml  profiles.toml  zig.toml
invoke/: profiles.toml
invoke/profile/: debug.json  release.json
invoke/toolchain/: clang.json  clang.toml  gcc.json  gcc.toml  msvc.json  msvc.toml  warnings.txt  zig.toml
src/: action.rs  error.rs  fetch.rs  input.rs  input2.rs  log.rs  main.rs  repr.rs
src/action/: build.rs  clangd.rs  generate.rs  help.rs  mod.rs  new.rs  run.rs  test.rs
src/config/: build.rs  elems.rs  lib.rs  mod.rs
src/config/settings/: args.rs  mod.rs
src/exec/: gcc.rs  gnu.rs  incremental.rs  mocks.rs  mod.rs  msvc.rs  output.rs  posix.rs  prep.rs  queue.rs
src/exec/agnostic/: mod.rs  repr.rs
src/repr/: args.rs  buildfile.rs  libfile.rs  mod.rs
src/testfw/: mod.rs
testframework/mscmptest/: asserts.h  casserts.h
testframework/vangotest/: asserts.h  asserts2.h  bench.h  casserts.h  casserts2.h
toolchains/: clang.toml  gcc.toml  msvc.toml  profiles.toml  zig.toml
vango-release/vangotest/: asserts.h  casserts.h
