[package]
name = "vango"
version = "2.12.6"
edition = "2024"

license = "GPL-2.0-only"
description = "Structural C/C++ build system written in Rust, inspired by cargo"
repository = "https://github.com/EmVance1/VanGo"
readme = "README.md"
exclude = [
    "docs/*",
    ".github/*"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
toml = { version = "0.9.5", features = ["preserve_order"] }
# clap = { version = "4.5.47", features = ["derive"] }
termcolor = "1.4.1"
thiserror = "2.0.0"

